--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "A Pytorch Based library for training world models"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ale-py>=0.11.2",
     "gym>=0.26.2",
+    "gymnasium>=1.2.2",
     "opencv-python>=4.12.0.88",
     "plotly>=6.5.0",
     "pre-commit>=4.5.0",
