--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ dependencies = [
     "gymnasium>=1.2.2",
     "mlagents-envs>=0.28.0",
     "moviepy>=2.2.1",
+    "nuplan-devkit>=1.1.0",
     "opencv-python>=4.12.0.88",
     "plotly>=6.5.0",
     "pre-commit>=4.5.0",
     "pygame>=2.6.1",
+    "scipy>=1.16.3",
     "tensorboard>=2.20.0",
     "tensorboardx>=2.6.4",
     "tqdm>=4.67.1",
