--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A Pytorch Based library for training world models"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "albumentations>=2.0.8",
     "ale-py>=0.11.2",
     "gym>=0.26.2",
     "gymnasium>=1.2.2",
